# Hack2024-backend

./: .env  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0c4f97b79e00_.py  2887c72aed89_.py  436661a13e6a_.py  470358acfc3f_.py  8fc671c53705_.py  c7f5431c0ab3_.py  fa484abce929_.py
src/api/: case.py  command.py  grade.py  question.py  session.py
src/authorization/: base_config.py  manager.py  schemas.py
src/models/: __init__.py  auth.py  case.py  command.py  form.py  grade.py  question.py  session.py
src/schemas/: Case.py  command.py  grade.py  question.py
src/services/: case.py  command.py  database.py  question.py
