[tool.poetry]
name = "hack2024-backend"
version = "0.1.0"
description = ""
authors = ["AveGus(Eldar) <garipov.eldar200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.35"}
asyncpg = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
